prevent textjump in msgbox#

--- a/www-develop/css/style.css
+++ b/www-develop/css/style.css
@@ -809,6 +809,7 @@ a.forgotpw {
     max-height: 0;
     transition: 0.35s linear all;
     overflow: hidden;
+    padding: 0px 12px;
 }
 
 .success-msg {
